Closed Bug 215694 Opened 22 years ago Closed 22 years ago

View -> Messages -> Unread setting is broken on restart

Categories

(SeaMonkey :: MailNews: Message Display, defect)

x86
Windows XP
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.6alpha

People

(Reporter: will, Assigned: Bienvenu)

References

Details

(Keywords: regression)

Attachments

(1 file)

If View -> Messages -> Unread is set and then Thunderbird is closed and opened again. All newsgroups will display all messages - including read ones. When you then go to View -> Messages, Unread is still ticked. This setting is apparantly not 'sticking' after a restart
did this used to work in builds?
Status: NEW → ASSIGNED
Target Milestone: --- → Thunderbird0.2
This used to work in all builds up to the 0.1 release. The post-0.1 builds seem to break some things that worked before.
Hmm this is working for me with the latest thunderbird windows release (8-13). I can set to show unread. Quit the app, restart and after the folder loads it changes to show the unread view.
Strange, it doesn't work here on W2K. After setting the filter to "Unread" and restarting, "View / Messages / Unread" is checked but the folder shows all messages. So setting back to "All" and then "Unread" shows only unread messages. This also happens using other filters like "Important". Using 0.1 with the same profile shows only unread emails right afer the restart, like it should. Mozilla Mail (20030818) does the same btw. Unfortunately, Mozilla nightlies aren't archived for a long time so we cannot trace back what caused this.
The following error in the JS console comes up when a folder is loaded after the restart (a filter different from "All" is selected): Error: gDBView has no properties Source File: chrome://messenger/content/searchBar.js Line: 116
moving into .3 still have not been able to reproduce.
Target Milestone: Thunderbird0.2 → Thunderbird0.3
(Maybe we should move this to MailNews so it gets more attention.) I think I tracked down which checkin caused this bug. It happened between 0729 and 0730, so I tried backing out the fix for bug 213688 in mailnews/local/src/nsLocalMailFolder.cpp and it resulted in a build without the bug described here. This matches the observation that it occured after Tb 0.1 (0727). Does this help?
Nice deduction. btw, are you suggesting that this bug only effects Pop / local mail accounts and not IMAP? That would explain why I cannot reproduce it.
Yes, that sounds plausible, I am experiencing this bug with local folders only since I don't use IMAP. The file I mentioned in my previous comment seems to affect local folder only, too. Looks like a proof :)
cc'ing bienvenu since he is the owner of 213688
taking, I'll try to fix this today.
Assignee: scott → bienvenu
Status: ASSIGNED → NEW
OK, I can verify that Malte is right, and backing out that change fixes it. I tried debugging it first and didn't get very far. I think the problem is definitely related to the searchbar error, but I'm not sure why that change causes the view to be null.
Status: NEW → ASSIGNED
OK, I see the problem - because my change resulted in us opening the db's less often (in particular, the INBOX at startup), we end up going through the code in nsLocalMailFolder::GetDatabase that opens the db, but more importantly, sends a folder loaded notification. It's this folder loaded notification that triggers the attempt to create the search bar, but it's too soon - we haven't created the view yet. The fix might be just to remove the folderloaded notification - it's unclear to me why it's there in the first place.
Keywords: regression
Product: Thunderbird → MailNews
Target Milestone: Thunderbird0.3 → mozilla1.6alpha
Version: unspecified → Trunk
Attached patch proposed fixSplinter Review
remove the folder loaded notification - there's no guarantee that the folder has been loaded. we send the correct folder loaded notification in UpdateFolder.
fixed on trunk.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Blocks: 219336
FYI: this is now fixed in thunderbird 0.3 as well
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: