Bug #215694 --> View -> Messages -> Unread setting is broken on restart.

Port David's fix to thunderbird 0.3